--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ networkx==2.4
 nltk==3.4.1
 notebook==6.0.1
 numpy==1.16.3
+opencv-contrib-python==3.4.8.29
 opencv-python==4.1.0.25
 ortools==7.4.7247
 pandas==0.24.2
